fixed folder ierarchy and global js vars on landing

--- a/landing/index.html
+++ b/landing/index.html
@@ -18,15 +18,15 @@
 
     <footer class="footer"></footer>
 
-    <script src="tankgame/assets/js/Helpers.js" type="application/javascript"></script>
-    <script src="tankgame/assets/js/Player.js" type="application/javascript"></script>
-    <script src="tankgame/assets/js/gameObjects/GameObject.js" type="application/javascript"></script>
-    <script src="tankgame/assets/js/gameObjects/Tank.js" type="application/javascript"></script>
-    <script src="tankgame/assets/js/gameObjects/TankCanonBall.js" type="application/javascript"></script>
-    <script src="tankgame/assets/js/utilities/GodForce.js" type="application/javascript"></script>
-    <script src="tankgame/assets/js/Geometry.js" type="application/javascript"></script>
-    <script src="tankgame/assets/js/Phisics.js" type="application/javascript"></script>
-    <script src="tankgame/assets/js/TankGame.js" type="application/javascript"></script>
+    <script src="js/tankgame/js/Helpers.js" type="application/javascript"></script>
+    <script src="js/tankgame/js/Player.js" type="application/javascript"></script>
+    <script src="js/tankgame/js/gameObjects/GameObject.js" type="application/javascript"></script>
+    <script src="js/tankgame/js/gameObjects/Tank.js" type="application/javascript"></script>
+    <script src="js/tankgame/js/gameObjects/TankCanonBall.js" type="application/javascript"></script>
+    <script src="js/tankgame/js/utilities/GodForce.js" type="application/javascript"></script>
+    <script src="js/tankgame/js/Geometry.js" type="application/javascript"></script>
+    <script src="js/tankgame/js/Phisics.js" type="application/javascript"></script>
+    <script src="js/tankgame/js/TankGame.js" type="application/javascript"></script>
     <script src="js/scripts.js" type="application/javascript"></script>
 </body>
 </html>
