--- a/tanki-otchet/index.html
+++ b/tanki-otchet/index.html
@@ -60,7 +60,7 @@
                     <li>Разместить код веб-страницы на хостинге</li>
                 </ol>
                 <ul class="lab1_list_doted">
-                    <li><a href="https://github.com/vberkal1/vberkal1.github.io/tanki-otchet">Исходный код</a>
+                    <li><a href="https://github.com/vberkal1/vberkal1.github.io/tree/main/tanki-otchet">Исходный код</a>
                     </li>
                     <li><a href="https://github.com/vberkal1/vberkal1.github.io">Репозиторий</a></li>
                 </ul>
